--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --white: #ffffff;
   --yellow: #ffd700;
   --blue: #0080ff;
-  /* --blue:#00FFFF; */
+  --cyan:#00FFFF;
 }
 
 html, body {
@@ -12,6 +12,10 @@ html, body {
   padding: 0;
   background-color: var(--black);
   scroll-behavior: smooth;
+}
+
+section{
+  padding: 2rem 1rem;
 }
 
 /* Header Section */
@@ -81,9 +85,154 @@ html, body {
   cursor: pointer;
 }
 
+/* Home Section */
+.home-section {
+  min-height: 80vh;
+  padding: 80px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, var(--blue), var(--yellow));
+  text-align: center;
+}
+
+.home-section h1 {
+  font-size: 2.8rem;
+  margin-bottom: 10px;
+}
+
+.home-section p {
+  font-size: 1.9rem;
+  margin-bottom: 30px;
+  font-weight: 700;
+  color: var(--white);
+}
+
+.home-section div {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.home-section button {
+  padding: 12px 24px;
+  font-size: 1rem;
+  font-weight: 700;
+  max-width: 170px;
+  min-width: 155px;
+  color: var(--yellow);
+  background-color: var(--black);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.home-section button:hover {
+  background-color: var(--cyan);
+  color: var(--black);
+  transform: scale(1.05);
+}
+
+/* About Section */
+.about-section {
+  background: var(--black);
+  text-align: center;
+}
+
+.about-section h2 {
+  font-size: 2.6rem;
+  margin-bottom: 20px;
+  color: var(--yellow);
+  text-transform: uppercase;
+}
+
+.about-content{
+  text-align: justify;
+  justify-self: center;
+}
+
+.about-section p {
+  font-size: 1.2rem;
+  color: var(--white);
+  line-height: 1.8;
+  max-width: 900px;
+  font-weight: 700;
+}
+
+.about-buttons {
+  display: flex;
+  gap: 20px;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.about-buttons button {
+  padding: 12px 24px;
+  font-size: 1rem;
+  font-weight: 700;
+  background-color: var(--blue);
+  color: var(--yellow);
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  max-width: 170px;
+  min-width: 155px;
+}
+
+.about-buttons button:hover {
+  background-color: var(--yellow);
+  color: var(--black);
+  transform: scale(1.05);
+}
+
+
+/* Footer Section */
+.footer {
+  background-color: var(--black);
+  padding: 15px;
+  text-align: center;
+  border-top: 2px solid var(--yellow);
+}
+
+.footer p {
+  font-size: 1.7rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: var(--yellow);
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 25px;
+}
+
+.social-icons a {
+  color: var(--white);
+  font-size: 1.7rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: var(--yellow);
+  transform: scale(1.05);
+}
+
+
 /* Responsive Design */
 @media (max-width: 768px) {
 
+  /* Section for mobile */
+  section {
+    padding: 2rem 0.1rem; 
+  }
+
+  /*header for mobile*/
   .menu-btn {
     display: block;
   }
@@ -108,4 +257,38 @@ html, body {
   .nav-right li a {
     font-size: 1rem;
   }
+
+  /*home for mobile*/
+  .home-section {
+    padding: 60px 15px;
+  }
+
+  .home-section h1 {
+    font-size: 2.2rem;
+  }
+
+  .home-section p {
+    font-size: 1.4rem;
+  }
+
+  /*about for mobile*/
+  .about-section h2 {
+    font-size: 2rem;
+  }
+
+  .about-section p {
+    font-size: 1rem;
+    max-width: 350px;
+  }
+
+  /* footer for mobile */
+   .footer p {
+    font-size: 1.2rem;
+  }
+
+  .social-icons a {
+    font-size: 1.5rem;
+    gap: 20px;
+  }
+  
 }
